# gaflowlm

./: .gitignore  README.md  config.yaml  pyproject.toml
.claude/: settings.local.json
.hermes/plans/: 2026-05-14_193000-cfs-phase3.md
docs/: ARCHITECTURE.md  EXPERIMENTS.md  GWS_FUTURE_PLAN.md  GWS_RESEARCH_DESIGN.md  IMPLEMENTATION_ROADMAP.md  LITERATURE_REVIEW.md  MATHEMATICAL_INSIGHTS.md  PAPER_OUTLINE.md  PSEUDOCODE.md  RESEARCH_PROPOSAL.md
experiments/gws/: ablation.py  ablation_multiseed.py  cfs_ablation.py  cfs_ablation_fair.py  gws_comparison.py  multiseed.py
gaflowlm/: README.md  __init__.py  algo.py  candi_utils.py  cfs_overfit_probe.py  dataclass_patch.py  dataloader.py  flash_attn_mock.py  flm_utils.py  gws_comparison.py  main.py  metrics.py  noise_schedules.py  requirements.txt  rhf_algo.py  rotor_utils.py  samplers.py  sandbox_gsm8k.py  schedulers.py  standalone_train.py  sudoku_generator.py  test_care.py  test_cfs.py  test_cfs_learning.py  test_cfs_model.py  test_gws.py  test_rhf_integration.py  trainer_base.py  utils.py
gaflowlm/callbacks/: throughput.py
gaflowlm/clifford/: __init__.py  engine.py  rotor_ops.py
gaflowlm/configs/: config.yaml
gaflowlm/data/: gsm8k_test.json
gaflowlm/gws/: __init__.py  ablation.py  benchmark_ns.py  cfs_ablation.py  diagnose.py  grade_decompose.py  gws_optimizer.py  plot_logs.py  rotor_schedule.py
gaflowlm/models/: __init__.py  candi_dit.py  care.py  cfs_arch.py  dit.py  (+4 more)
tests/: test_care.py  test_cfs.py  test_cfs_learning.py  test_cfs_model.py  test_clifford_engine.py  test_gws.py  test_rhf_integration.py
(+120 files in other folders)
