[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gaflowlm"
version = "0.1.0"
description = "Geometric algebra extensions for hyperspherical flow language models (S-FLM fork)."
requires-python = ">=3.10"
# Runtime: torch is the only hard dep for the core library (clifford engine,
# schedulers, rotor_utils, models). The full training stack — Lightning,
# Hydra, transformers, datasets, etc. — is pinned in gaflowlm/requirements.txt
# and is intentionally not duplicated here so that NGC PyTorch container users
# don't accidentally clobber their CUDA-matched torch build.
dependencies = [
    "torch>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gaflowlm*"]
exclude = ["tests*", "experiments*", "docs*"]
